--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -2,26 +2,26 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="../../../assets/images/logo-premag 2.png" alt="Logo da Premag"></a>
+              <a class="navbar-brand" href="home"><img src="../../../assets/images/logo-premag 2.png" alt="Logo da Premag"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link color-c3" href="#">A Fábrica</a>
+                    <a class="nav-link color-c3" href="fabrica">A Fábrica</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color-c3" href="#">Produtos e Serviços</a>
+                    <a class="nav-link color-c3" href="produtos-e-servicos">Produtos e Serviços</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color-c3" href="#">Principais Obras</a>
+                    <a class="nav-link color-c3" href="principais-obras">Principais Obras</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color-c3">Tecnologia</a>
+                    <a class="nav-link color-c3" href="tecnologia">Tecnologia</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link color-c3">contato</a>
+                    <a class="nav-link color-c3" href="contato">contato</a>
                   </li>
                 </ul>
               </div>
