--- a/src/app/elements/footer/footer.component.html
+++ b/src/app/elements/footer/footer.component.html
@@ -1,3 +1,25 @@
-<p>footer works!</p>
+<div class="premag-footer background-color-c13 color-c8" id="premag-footer">
+    <div class="container">
+        <div class="row row-cols-4">
+            <div class="col-8 premag-margin-top-40">
+                <img src="../../../assets/images/logo-premag-3.png" alt="Logo Premag">
+                <p class="premag-margin-top-40"><span class="premag-color-05">PREMAG</span>, a experiência concreta. Pré-fabrica, transporta e monta tabuleiros de pontes, viadutos e passarelas em concreto pré-fabricado e protendido desde 1975.</p>
+            </div>
+            <div class="col premag-margin-top-120 premag-margin-left-40">
+                <h4>Links rápidos</h4>
+                <div class="premag-deco-retangulo premag-deco-retangulo-50 premag-height-1x"></div>
+
+                <ul class="premag-ul premag-margin-top-12 premag-color-06">
+                    <li class=""><a href="home" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">Home</a></li>
+                    <li class=""><a href="fabrica" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">A Fábrica</a></li>
+                    <li class=""><a href="produtos-e-servicos" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">Produtos e Serviços</a></li>
+                    <li class=""><a href="principais-obras" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">Principais Obras</a></li>
+                    <li class=""><a href="tecnologia" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">Tecnologia</a></li>
+                    <li class=""><a href="contato" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">Contato</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
