--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,44 @@
 
+@use "sass/_layout.scss" as layout;
 @import url(./sass/_colors.scss);
+
+
+$prefix : premag;
+
+@include layout.margin('.premag-margin-top-', 'margin-top');
+@include layout.margin('.premag-margin-left-', 'margin-left');
+@include layout.margin('.premag-margin-bottom-', 'margin-bottom');
+
+@include layout.padding('.premag-padding-top-', 'padding-top');
+@include layout.padding('.premag-padding-left-', 'padding-left');
+@include layout.padding('.premag-padding-bottom-', 'padding-bottom');
+
+.#{$prefix} {
+    &-footer {
+        height: 425px;
+    }
+    &-ul {
+        list-style: none;
+        padding-left: 0;
+    }
+    &-deco {
+        &-retangulo {
+            display: block;
+            margin-top: -8px;
+            margin-left: 0;
+
+            &-25 { width: 25%; }
+            &-50 { width: 50%; }
+            &-75 { width: 75%; }
+            &-100 { width: 100%; }
+
+        }
+    }
+    &-height{
+        &-1x { height: 4px; }
+        &-2x { height: 8px; }
+        &-3x { height: 12px; }
+        &-4x { height: 16px; }
+        &-5x { height: 20px; }
+    }
+}
