Criando as páginas do site

--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -1,1 +1,77 @@
-<p>construction works!</p>
+<div class="obras" id="obras">
+    <div class="premag-obras-banner">
+        <div class="container">
+            <p class="premag-font-18 premag-color-01 premag-primary-font"></p>    
+        </div>
+    </div>
+    <div class="premag-obras-content background-color-c12 d-flex flex-row align-items-start">
+        <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font d-flex justify-content-start align-items-center">Principais Obras</h1>
+        <div class="container premag-obras-container premag-padding-top-80 premag-padding-bottom-80">
+            <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c2">Principais Obras</h2>
+            <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
+            <div class="row premag-padding-top-40">
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="../../../assets/images/ponte-sobre-o-rio-paraiba-do-sul.png" alt="Foto da ponte sobre o Rio Paraíba do Sul">
+                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
+                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Ponte sobre o Rio Paraíba do Sul</h5>
+                            <p class="card-text premag-font-14">
+                                <span class="premag-font-weight-600">LOCAL:</span> Floriano / Barra Mansa – RJ<br>
+                                <span class="premag-font-weight-600">ANO:</span> 1976<br>
+                                <span class="premag-font-weight-600">COMPRIMENTO:</span> 200,50 m<br>
+                                <span class="premag-font-weight-600">LARGURA:</span> 10,00 m<br>
+                                <span class="premag-font-weight-600">CLIENTE FINAL:</span> PMBM – Prefeitura Municipal de Barra Mansa / FUNDERJ.</p>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="../../../assets/images/obras-de-arte-especiais.png" alt="Foto das Obras-de-Arte Especiais">
+                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
+                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Obras-de-Arte Especiais</h5>
+                            <p class="card-text premag-font-14">
+                                <span class="premag-font-weight-600">LOCAL:</span> Auto Estrada Lagoa-Barra / Rio de Janeiro – RJ<br>
+                                <span class="premag-font-weight-600">ANO:</span> 1981<br>
+                                <span class="premag-font-weight-600">VIADUTO I –</span> Comp.: 104,07 m Larg.: 17,60 m<br>
+                                <span class="premag-font-weight-600">VIADUTO II –</span> Comp.: 34,00 m Larg.: 8,80 m<br>
+                                <span class="premag-font-weight-600">VIADUTO III –</span> Comp.: 33,90 m Larg.: 12,00 m<br>
+                                <span class="premag-font-weight-600">COBERTURA DO RIO RAINHA –</span> Área: 1.830,00m2<br>
+                                <span class="premag-font-weight-600">CLIENTE FINAL:</span> FUNDERJ</p>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img class="card-img-top" src="../../../assets/images/passarela-sobre-av-brasil.png" alt="Foto da Passarela sobre a Av. Brasil">
+                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
+                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Passarela sobre a Av. Brasil</h5>
+                            <p class="card-text premag-font-14">
+                                <span class="premag-font-weight-600">LOCAL:</span> Av. Brasil / Rio de Janeiro – RJ<br>
+                                <span class="premag-font-weight-600">ANO:</span> 2002<br>
+                                <span class="premag-font-weight-600">COMPRIMENTO:</span> 190,00 m<br>
+                                <span class="premag-font-weight-600">LARGURA:</span> 2,00 m<br>
+                                <span class="premag-font-weight-600">CLIENTE FINAL:</span> PCRJ – Prefeitura da Cidade do Rio de Janeiro</p>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="premag-clientes-content d-flex flex-row align-items-start">
+        <div class="container premag-clientes-container premag-padding-top-80 premag-padding-bottom-80">
+            <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c6">Principais Clientes</h2>
+            <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
+
+                <app-carousel
+                    [imagens] = "[
+                        '../../../assets/images/br-petrobras.svg',
+                        '../../../assets/images/embratel-1.svg',
+                        '../../../assets/images/light.svg'
+                    ]"
+                ></app-carousel>
+        </div>
+    </div>
+</div>
