--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,61 @@
-<p>contact works!</p>
+<div class="contato" id="contato">
+    <div class="premag-contato-banner">
+        <div class="container">
+            <p class="premag-font-18 premag-color-01 premag-primary-font"></p>    
+        </div>
+    </div>
+    <div class="premag-contato-content background-color-c12 d-flex flex-row align-items-start">
+        <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font d-flex justify-content-start align-items-center">Contato</h1>
+        <div class="container premag-padding-top-80 premag-padding-bottom-200 premag-margin-left-0">
+            <div class="row">
+                <div class="col">
+                    <p class="color-c6">
+                        Rod. BR-116/RJ – km 111,5<br>
+                        Citrolândia<br>
+                        Caixa Postal: 93.748<br>
+                        25900-000 . Magé . RJ . Brasil
+                    </p>
+                    <p class="color-c6">
+                        Tel/Fax:(21) *2633-9933<br>
+                        E-mail: <a href="mailto: premag@premag.com.br" class="premag-color-05">premag@premag.com.br</a>
+                    </p>
+                    <img src="../../../assets/images/google-maps-contato.png" class="premag-margin-top-80">
+                </div>
+                <div class="col">
+                    <h3 class="color-c6 premag-margin-bottom-80">Fale com a <span class="premag-color-05 premag-font-weight-600">PREMAG</span></h3>
+                    <form>
+                        <div class="form-group premag-margin-bottom-16">
+                            <label for="colFormLabel" class="premag-margin-bottom-4 color-c4">Nome</label>
+                            <input type="text" class="form-control" id="colFormLabel">
+                        </div>
+                        <div class="form-group premag-margin-bottom-16">
+                            <label for="colFormLabel" class="premag-margin-bottom-4 color-c4">E-mail</label>
+                            <input type="email" class="form-control" id="colFormLabel">
+                        </div>
+                        <div class="form-group premag-margin-bottom-16">
+                            <label for="colFormLabel" class="premag-margin-bottom-4 color-c4">Endereço</label>
+                            <input type="text" class="form-control" id="colFormLabel">
+                        </div>
+                        <div class="form-group premag-margin-bottom-16">
+                            <label for="colFormLabel" class="premag-margin-bottom-4 color-c4">Telefone</label>
+                            <input type="tel" class="form-control" id="colFormLabel">
+                        </div>
+                        <div class="form-group premag-margin-bottom-16">
+                            <label for="colFormLabel" class="premag-margin-bottom-4 color-c4">Celular</label>
+                            <input type="tel" class="form-control" id="colFormLabel">
+                        </div>
+                        <div class="form-group premag-margin-bottom-16">
+                            <label for="colFormLabel" class="premag-margin-bottom-4 color-c4">Assunto</label>
+                            <input type="text" class="form-control" id="colFormLabel">
+                        </div>
+                        <div class="form-group premag-margin-bottom-16">
+                            <label for="colFormLabel" class="premag-margin-bottom-4 color-c4">Mensagem</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <button type="button" class="btn btn-lg background-premag-color-05 premag-secondary-font text-uppercase premag-font-weight-800 premag-font-24">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
