--- a/src/app/pages/factory/factory.component.html
+++ b/src/app/pages/factory/factory.component.html
@@ -1,1 +1,56 @@
-<p>factory works!</p>
+<div class="factory" id="factory">
+    <div class="premag-fabrica-banner">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p class="premag-font-18 premag-color-01 premag-primary-font font-weight-bold premag-margin-top-80 premag-margin-bottom-40">A sede fabril da <span class="premag-color-05">PREMAG</span> está instalada nas margens da Rodovia BR-116/RJ, no km 111, em Citrolândia, Magé, RJ. Sua localização permite total integração com a malha rodoviária do Estado do Rio de Janeiro e situa-se junto à Estação de Citrolândia, no ramal ferroviário de acesso a Guapimirim.</p>
+                </div>
+                <div class="col">
+                    <img src="../../../assets/images/gogle-maps-fabrica.png" alt="endereço da fábrica" class="mt-5">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="premag-fabrica-content background-color-c12 d-flex flex-row align-items-start">
+        <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font d-flex justify-content-start align-items-center">Fábrica</h1>
+        <div class="container premag-padding-top-80 premag-padding-bottom-80 premag-margin-left-0">
+            <div class="row">
+                <div class="col-3 d-flex flex-column justify-content-start align-items-start">
+                    <img src="../../../assets/images/patio-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40">
+                    <img src="../../../assets/images/central-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40">
+                    <img src="../../../assets/images/armacao-fabrica.png" alt="Foto da fábrica" class="premag-margin-bottom-40">
+                </div>
+                <div class="col-9 premag-primary-font premag-font-24">
+                    <div class="premag-deco-retangulo-05 premag-deco-retangulo-h-05 premag-height-1x background-premag-color-05"></div>
+                    <div class="premag-deco-retangulo-90 premag-deco-retangulo-h-05 background-premag-color-05"></div>
+                    <p class="color-c6 premag-deco-retangulo-text premag-margin-left-20">A região dispõe de farta mão de obra, água, energia e está próxima aos centros produtores e distribuidores dos insumos básicos constituintes do concreto.<br>
+                    O seu parque industrial conta com uma das mais avançadas usinas de concreto, permitindo a produção de concretos de alta resistência através do controle rigoroso de pesagem e eficiência de mistura possibilitando o transporte tanto em betoneiras como em caçambas para o caso de concretos mais secos.</p>
+                    <p class="color-c6 premag-margin-left-20">Neste local também se encontra a central de armação que fornece o aço cortado, dobrado e montado tanto para uso interno da fábrica quanto para atendimento as necessidades no campo.</p>
+                    <p class="color-c6 premag-margin-left-20">Para a fabricação das vigas das OAE’s a PREMAG conta com 2 pistas de protensão com extensão de 136m e 220m que permitem a execução de até 2 ciclos por semana cada, conseguindo assim em condições ótimas atender a demanda de fabricação de aproximadamente 700m de viga por semana. Em paralelo o pátio de fabricação de peças planas pode acompanhar esta demanda com a produção de lajes, pré-lajes, transversinas e dispositivos de contenção lateral necessários para o completo fornecimento de toda a superestrutura. Devido a grande área disponível para estoque destes pré-fabricados é possível avançar a produção destas estruturas sem sobrecarregar o canteiro de obras no campo nem os espaços públicos, diminuindo os transtornos aos usuários.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="numbers">
+        <div class="container">
+            <div class="d-flex flex-row align-items-center justify-content-between premag-margin-top-80 premag-margin-bottom-80 premag-secondary-font">
+                <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
+                    <p>732</p>
+                    <p>Pontes</p>
+                </div>
+                <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
+                    <p>87</p>
+                    <p>Viadutos</p>
+                </div>
+                <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
+                    <p>247</p>
+                    <p>Passarelas</p>
+                </div>
+                <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
+                    <p>1393</p>
+                    <p>Obras Concluídas</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
