--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,1 +1,66 @@
-<p>products works!</p>
+<div class="products" id="products">
+    <div class="premag-product-banner">
+        <div class="container">
+            <p class="premag-font-18 premag-color-01 premag-primary-font"></p>    
+        </div>
+    </div>
+    <div class="premag-product-content background-color-c12 d-flex flex-row align-items-start">
+        <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font d-flex justify-content-start align-items-center">Produtos e Serviços</h1>
+        <div class="container premag-product-container premag-padding-top-80 premag-padding-bottom-80">
+            <div class="premag-product-item premag-margin-bottom-40">
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-7 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40">
+                        <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Pontes</h2>
+                        <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="premag-product-item premag-margin-bottom-40">
+                <div class="row">
+                    <div class="col-7 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40">
+                        <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Galerias</h2>
+                        <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+            </div>
+            <div class="premag-product-item premag-margin-bottom-40">
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-7 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40">
+                        <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Viadutos</h2>
+                        <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="premag-product-item premag-margin-bottom-40">
+                <div class="row">
+                    <div class="col-7 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40">
+                        <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Edificações</h2>
+                        <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+            </div>
+            <div class="premag-product-item premag-margin-bottom-40">
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-7 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40">
+                        <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Passarelas</h2>
+                        <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="premag-product-item premag-margin-bottom-40">
+                <div class="row">
+                    <div class="col-7 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40">
+                        <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Mobiliário Urbano</h2>
+                        <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
